perf: image test

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- MAIN IMAGE -->
                 <div class="component-image-wrapper">
                     <img id="mainPlanImg" class="main-plan-img zoom-btn" src="./images/full/1.webp"
-                        alt="Գլխավոր նախագծային պլանի պատկեր" fetchpriority="high" loading="eager" decoding="async"
+                        alt="Գլխավոր նախագծային պլանի պատկեր" loading="lazy" decoding="async"
                         width="1200" height="900">
 
 
