style: adjust padding and remove 90% width in responsive styles

--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
                 <!-- MAIN IMAGE -->
                 <div class="component-image-wrapper">
                     <img id="mainPlanImg" class="main-plan-img zoom-btn" src="./images/full/1.webp"
-                        alt="Գլխավոր նախագծային պլանի պատկեր" loading="lazy" decoding="async"
-                        width="1200" height="900">
+                        alt="Գլխավոր նախագծային պլանի պատկեր" loading="lazy" decoding="async" width="1200" height="900">
 
 
                     <button class="main-arrow prev" type="button" aria-label="Նախորդ պատկեր">‹</button>
