perf: add fetchpriority='high' to images in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- LOGO -->
             <a href="#hero" class="main-header__logo">
                 <div class="logo">
-                    <img src="/images/logo.webp" alt="Լոգո" width="200" height="200">
+                    <img src="/images/logo.webp" alt="Լոգո" width="200" height="200" fetchpriority="high">
                 </div>
             </a>
 
@@ -65,7 +65,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <div class="hero-logo">
-                        <img src="/images/logo.webp" alt="Լոգո" width="600" height="600">
+                        <img src="/images/logo.webp" alt="Լոգո" width="600" height="600" fetchpriority="high">
                     </div>
                     <h1 class="hero-title">ՊԵՏԱԿԱՆ ԳՈՒՅՔԻ
                         ՕՏԱՐՄԱՆ ՆԵՐԴՐՈՒՄԱՅԻՆ
@@ -86,7 +86,8 @@
                 <!-- MAIN IMAGE -->
                 <div class="component-image-wrapper">
                     <img id="mainPlanImg" class="main-plan-img zoom-btn" src="./images/full/1.webp"
-                        alt="Գլխավոր նախագծային պլանի պատկեր" loading="lazy" decoding="async" width="1200" height="900">
+                        alt="Գլխավոր նախագծային պլանի պատկեր" fetchpriority="high" decoding="async" width="1200"
+                        height="900">
 
 
                     <button class="main-arrow prev" type="button" aria-label="Նախորդ պատկեր">‹</button>
