feat: update logo image in navigation bar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- LOGO -->
             <a href="#hero" class="main-header__logo">
                 <div class="logo">
-                    <img src="/images/logo.webp" alt="Լոգո" width="200" height="200" fetchpriority="high">
+                    <img src="/images/Prospect24-logo.png" alt="Լոգո" width="200" height="200" fetchpriority="high">
                 </div>
             </a>
 
