perf(lcp): preload hero background image with high priority

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="description"
         content="Ներդրումային փաթեթ՝ ներառյալ տարածքի նկարագրություն, նախագծային նյութեր և ներբեռնվող փաստաթղթեր։">
     <meta name="robots" content="index, follow">
+    <link rel="preload" as="image" href="/images/full/1.webp" fetchpriority="high">
+    <link rel="preload" as="image" href="/images/bg.webp" fetchpriority="high">
 
-    <link rel="preload" as="image" href="/images/full/1.webp">
     <link rel="stylesheet" href="/src/css/main.css">
 
     <script type="module" src="/src/js/main.js" defer></script>
