fix(attribute  name)

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <!-- MAIN IMAGE -->
                 <div class="component-image-wrapper">
                     <img id="mainPlanImg" class="main-plan-img zoom-btn" src="/images/full/1.webp"
-                        alt="Գլխավոր նախագծային պլանի պատկեր" fetchpriority="high" decoding="async" width="1200"
+                        alt="Գլխավոր պատկեր" fetchpriority="high" decoding="async" width="1200"
                         height="900">
 
 
@@ -528,8 +528,6 @@
             </div>
         </div>
     </div>
-
-
 
 </body>
 
